Complete tutorial 5 and 6

--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -18,7 +18,7 @@
         {% block content %}
         {% endblock content %}
         <hr />
-        <h5>Our footer</h5>
+        <h5 style="padding-left: 15px;">Our footer</h5>
     </body>
     <script
         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
