--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <img src="{% static 'images/Sizzle.png' %}" alt="">
+    <img src="{% static 'images/Sizzle.png' %}" alt="" />
     <button
         class="navbar-toggler"
         type="button"
@@ -15,9 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#"
-                    >Dashboard</a
-                >
+                <a class="nav-link" href="#">Dashboard</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Products</a>
